--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 QUEUE_DRIVER=sync
+
+DATA_SOURCE=https://pastebin.com/raw/cVyp3McN
+GAP_OF_MINS=30
+MOVIE_TIMEZONE=11:00
